# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-tools"
dynamic = ["version"]
authors = [
  { name="Timothy Smith", email="tim.smith@noaa.gov" },
]
description = "Tools for processing and evaluating anemoi based EAGLE ML models."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "numpy",
    "scipy",
    "pandas",
    "xarray",
    "zarr<3",
    "ufs2arco>=0.17.2",
    "anemoi-datasets",
    "anemoi-inference",
    "matplotlib",
    "cartopy",
    "cmocean",
]

# These are only available on conda:
# mpi
# xesmf
# 


# This tells setuptools where to find your package(s)
[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
eagle-tools = "eagle.tools.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.package-data]
"eagle.tools.config" = ["*.yaml"]
